--- a/.classpath
+++ b/.classpath
@@ -2,7 +2,7 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
-	<classpathentry kind="lib" path="core.jar"/>
+	<classpathentry kind="lib" path="core.jar" sourcepath="core.jar"/>
 	<classpathentry kind="lib" path="controlP5.jar"/>
 	<classpathentry kind="lib" path="minim.jar"/>
 	<classpathentry kind="lib" path="jsminim.jar"/>
